# proc-gen

./: .gitignore  README.md  blob_1.py  blob_trace.py  pyproject.toml
.github/workflows/: deploy.yaml
contours/: __main__.py
docs/: index.html  style.css
frontend/: index.html  style.css
scripts/: kde_set_background.sh
wpg/: blob_1.py  blob_trace.py  colors.py  utils.py
wpg/contours/: __main__.py  generator.py
