[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
coloraide = "^3.3.1"
numpy = "^1.26.4"
pillow = "^10.3.0"
pyfastnoisesimd = "^0.4.2"
scikit-image = "^0.23.2"
scipy = "^1.13.0"
pycairo = "^1.26.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
